--- a/InstancedObject.uplugin
+++ b/InstancedObject.uplugin
@@ -2,8 +2,8 @@
 	"FileVersion": 3,
 	"Version": 1,
 	"VersionName": "1.0",
-	"FriendlyName": "InstancedObjects",
-	"Description": "",
+	"FriendlyName": "InstancedObject",
+	"Description": "Structure wrapper for instanced object for easier use in blueprints",
 	"Category": "Other",
 	"CreatedBy": "Bargest",
 	"CreatedByURL": "",
@@ -15,7 +15,7 @@
 	"Installed": false,
 	"Modules": [
 		{
-			"Name": "InstancedObjects",
+			"Name": "InstancedObject",
 			"Type": "Runtime",
 			"LoadingPhase": "Default"
 		},
