--- a/InstancedObject.uplugin
+++ b/InstancedObject.uplugin
@@ -6,8 +6,8 @@
 	"Description": "Structure wrapper for instanced object for easier use in blueprints",
 	"Category": "Other",
 	"CreatedBy": "Bargest",
-	"CreatedByURL": "",
-	"DocsURL": "",
+	"CreatedByURL": "https://github.com/Bargestt",
+	"DocsURL": "https://github.com/Bargestt/InstancedObject",
 	"MarketplaceURL": "",
 	"CanContainContent": true,
 	"IsBetaVersion": false,
